--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav class="navbar navbar-expand-lg bg-inverse fixed-top scrolling-navbar">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt=""></a>       
+          <a href="#" class="navbar-brand"><img src="assets/img/logo.png" alt=""></a>       
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="lni-menu"></i>
           </button>
@@ -85,7 +85,7 @@
               <div class="contents text-center">
                 <p class="banner-info"></p>
                 <h2 class="head-title">49th Anniversary Peruri</h2>
-                <p class="banner-info">@Live Streaming, 19 September 2020 | 08.00 WIB s/d Selesai</p>
+                <p class="banner-info">@Live Streaming, 19 September 2020</p>
                   <div class="banner-btn">
                   <a href="#about" class="btn btn-common">See More</a>
                 </div>
@@ -351,6 +351,17 @@
     <section id="counter" class="counter-section section-padding">
       <div class="container" >
         <div class="row">
+          <div class="col-lg-3 col-md-6 col-xs-12 work-counter-widget">
+            <div class="counter">
+              <div class="icon">
+                <i class="lni-plus"></i>
+              </div>
+              <div class="counter-content">
+                <div class="counterUp">357</div>
+                <p>Total Item Doorprize</p>
+              </div>
+            </div>
+          </div>
           <!-- Counter Item -->
           <div class="col-lg-3 col-md-6 col-xs-12 work-counter-widget">
             <div class="counter">
@@ -358,8 +369,32 @@
                 <i class="lni-users"></i>
               </div>
               <div class="counter-content">
-                <div class="counterUp">3000</div>
-                <p>Employee</p>
+                <div class="counterUp">2893</div>
+                <p>Employee of Peruri</p>
+              </div>
+            </div>
+          </div>
+          <!-- Counter Item -->
+          <div class="col-lg-3 col-md-6 col-xs-12 work-counter-widget">
+            <div class="counter">
+              <div class="icon">
+                <i class="lni-cup"></i>
+              </div>
+              <div class="counter-content">
+                <div class="counterUp">113</div>
+                <p>Innovation Participated</p>
+              </div>
+            </div>
+          </div>
+          <!-- Counter Item -->
+          <div class="col-lg-3 col-md-6 col-xs-12 work-counter-widget">
+            <div class="counter">
+              <div class="icon">
+                <i class="lni-youtube"></i>
+              </div>
+              <div class="counter-content">
+                <div class="counterUp">10</div>
+                <p>Video Performed</p>
               </div>
             </div>
           </div>
