--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="description" content="4th Anniversary Peruri | 19 September 2020 @Live Streaming">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>HUT Peruri Ke-49</title>
@@ -23,6 +24,9 @@
     <link href="assets/dist/lity.css" rel="stylesheet">
     <script src="assets/vendor/jquery.js"></script>
     <script src="assets/dist/lity.js"></script>
+
+    <link rel="icon" href="assets/img/logo.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="assets/img/logo.ico" type="image/x-icon"/>  
 
 
   </head>
