--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="description" content="4th Anniversary Peruri | 19 September 2020 @Live Streaming">
+    <meta property="og:title" content="HUT PERURI Ke-49">
+    <meta property="og:description" content="4th Anniversary Peruri | 19 September 2020 @Live Streaming">
+    <meta property="og:image" content="assets/img/logo2.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>HUT Peruri Ke-49</title>
@@ -1013,45 +1016,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="row justify-content-center">
-          <div class="col-lg-8 col-md-12 col-xs-12">
-            <div class="container-form wow fadeInLeft" data-wow-delay="0.2s">
-              <div class="form-wrapper">
-                <form role="form" method="post" id="contactForm" name="contact-form" data-toggle="validator">
-                  <div class="row">
-                    <div class="col-md-6 form-line">
-                      <div class="form-group">
-                        <input type="text" class="form-control" id="name" name="email" placeholder="First Name" required data-error="Please enter your name">
-                        <div class="help-block with-errors"></div>
-                      </div>
-                    </div>
-                    <div class="col-md-6 form-line">
-                      <div class="form-group">
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Email" required data-error="Please enter your Email">
-                        <div class="help-block with-errors"></div>
-                      </div> 
-                    </div>
-                    <div class="col-md-12 form-line">
-                      <div class="form-group">
-                        <input type="tel" class="form-control" id="msg_subject" name="subject" placeholder="Subject" required data-error="Please enter your message subject">
-                        <div class="help-block with-errors"></div>
-                      </div>
-                    </div>
-                    <div class="col-md-12">
-                      <div class="form-group">
-                        <textarea class="form-control" rows="4" id="message" name="message" required data-error="Write your message"></textarea>
-                      </div>
-                      <div class="form-submit">
-                        <button type="submit" class="btn btn-common" id="form-submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>  Send Message</button>
-                        <div id="msgSubmit" class="h3 text-center hidden"></div>
-                      </div>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div> -->
+       
       </div>
     </section>
     <!-- Contact Us Section End -->
@@ -1062,12 +1027,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8 col-md-12 col-xs-12">
             <div class="subscribe-inner wow fadeInDown" data-wow-delay="0.3s">
-              <!-- <form class="text-center form-inline">
-                <input class="mb-20 form-control" name="email" placeholder="Enter Your Email Here">
-                <button type="submit" class="btn btn-common sub-btn" data-style="zoom-in" data-spinner-size="30" name="submit" id="submit">
-                  <span class="ladda-label"><i class="lni-check-box"></i> Subscribe</span>
-                </button>
-              </form> -->
+
             </div>
             <div class="footer-logo">
               <img src="assets/img/logo2.png" alt="">
