--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="description" content="4th Anniversary Peruri | 19 September 2020 @Live Streaming">
-    <meta property="og:title" content="HUT PERURI Ke-49">
-    <meta property="og:description" content="4th Anniversary Peruri | 19 September 2020 @Live Streaming">
-    <meta property="og:image" content="assets/img/logo2.png">
+    <meta property="title" content="HUT PERURI Ke-49">
+    <meta property="description" content="4th Anniversary Peruri | 19 September 2020 @Live Streaming">
+    <meta property="image" content="assets/img/logo2.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>HUT Peruri Ke-49</title>
